--- a/site/src/app/layout/header/header.component.css
+++ b/site/src/app/layout/header/header.component.css
@@ -1,11 +1,11 @@
-/* --------- heading --------- */
+/* --------- header --------- */
 
 .heading-section {
     text-align: center;
 }
 
 .heading-section h1 {
-    font-size: 58px;
+    font-size: 40px;
 }
 
 .heading-section h2 {
