--- a/site/src/app/app.component.html
+++ b/site/src/app/app.component.html
@@ -6,19 +6,29 @@
         <mat-icon>menu</mat-icon>
     </button>
     <a class="logo" fxShow="false" fxShow.gt-xs="true" href="/">
-        <img src="assets/img/logo.png">
+        <img src="assets/img/logo.jpg">
     </a>
     <mat-nav-list class="navigation-list" fxLayout="row" fxShow="false" fxShow.gt-xs="true">
-        <a mat-list-item href="#about">About</a>
-        <a mat-list-item href="#portfolio">Portfolio</a>
-        <a mat-list-item href="#pricing">Pricing</a>
-        <a mat-list-item href="#blog">Blog</a>
-        <a mat-list-item href="#contact">Contact</a>
+
+        <a mat-list-item [matMenuTriggerFor]="belowMenu">О нас</a>
+        <a mat-list-item href="#news">Новости</a>
+        <a mat-list-item href="#portfolio">Услуги</a>
+        <a mat-list-item href="#pricing">Продукты</a>
+        <a mat-list-item href="#blog">Филиалы</a>
+        <a mat-list-item href="#blog">Вакансии</a>
+        <a mat-list-item href="#contact">Контакты</a>
+
+        <mat-menu #belowMenu="matMenu" yPosition="below">
+            <button href="#about-company" mat-menu-item>Item 1</button>
+            <button href="#news-listing" mat-menu-item>Item 2</button>
+        </mat-menu>
+
     </mat-nav-list>
     <span class="navigation-spacer"></span>
-    <button id="contact-fab-button" (click)="openDialog()" mat-mini-fab color="primary" matTooltip="Изменение языка"
+    <button id="contact-fab-button" (click)="openDialog()" mat-flat-button color="primary" matTooltip="Изменение языка"
             [matTooltipPosition]="'left'">
-        <mat-icon>flag</mat-icon>
+        <img src="assets/img/flags/{{currentLang}}.png"/>
+        {{currentLang|uppercase}}
     </button>
 </mat-toolbar>
 
@@ -29,18 +39,25 @@
     <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
                  [fixedInViewport]="mobileQuery.matches" (opened)="setToggleOn()" (closed)="setToggleOff()">
         <mat-nav-list>
-            <a id="mobilelogo" class="logo" fxShow="true" fxShow.gt-xs="false" href="#"><img src="assets/img/logo.png"></a>
-            <a mat-list-item href="#about">About</a>
-            <a mat-list-item href="#portfolio">Portfolio</a>
-            <a mat-list-item href="#pricing">Pricing</a>
-            <a mat-list-item href="#blog">Blog</a>
-            <a mat-list-item href="#contact">Contact</a>
+            <a id="mobilelogo" class="logo" fxShow="true" fxShow.gt-xs="false" href="#">
+                <img src="assets/img/logo.jpg">
+            </a>
+
+            <a mat-list-item href="#about">О нас</a>
+            <a mat-list-item href="#news">Новости</a>
+            <a mat-list-item href="#portfolio">Услуги</a>
+            <a mat-list-item href="#pricing">Продукты</a>
+            <a mat-list-item href="#blog">Филиалы</a>
+            <a mat-list-item href="#blog">Вакансии</a>
+            <a mat-list-item href="#contact">Контакты</a>
+
         </mat-nav-list>
     </mat-sidenav>
 
     <mat-sidenav-content nglp-scroll (onScroll)="detectScroll($event)">
 
-        <app-heading></app-heading>
+        <app-header></app-header>
+
         <app-about></app-about>
         <app-portfolio></app-portfolio>
         <app-pricing></app-pricing>
