--- a/site/src/app/layout/footer/footer.component.html
+++ b/site/src/app/layout/footer/footer.component.html
@@ -1,19 +1,41 @@
 <footer class="docs-footer">
     <div class="docs-footer-list">
+
         <div class="docs-footer-logo">
-            <div class="footer-logo">
-                <img class="docs-footer-angular-logo"
-                     src="assets/img/logo.png"
-                     alt="angular">
-            </div>
+            <p> &copy; 2019 Alskom-Vita Все права защищены. </p>
+            <p>
+                Официальный сайт:
+                При полном или частичном использовании и цитировании материалов, опубликованных на данном сайте, ссылка
+                на официальный сайт АО СК "ALSKOM" обязательна
+            </p>
         </div>
 
         <div class="docs-footer-version">
-            <span class="version">Current Version: 0.0.1</span>
+
+            <mat-list>
+                <mat-list-item>
+                    <mat-icon mat-list-icon color="accent">email</mat-icon>
+                    <p class="text-footer"> alskomvita@gmail.com </p>
+                </mat-list-item>
+                <mat-list-item>
+                    <mat-icon mat-list-icon color="accent">location_on</mat-icon>
+                    <p class="text-footer">г.Ташкент, ул.Амира Темура 109
+                    </p>
+                </mat-list-item>
+                <mat-list-item>
+                    <mat-icon mat-list-icon color="accent">phone</mat-icon>
+                    <p class="text-footer"> 78 147-11-00,78 147-22-00</p>
+                </mat-list-item>
+
+            </mat-list>
+
         </div>
 
         <div class="docs-footer-copyright">
-            <span>Powered by Alskom Vita ©2019.</span>
+            <a href="http://www.uz/ru/res/visitor/index?id=27160" target="_blank">
+                <img src="http://cnt0.www.uz/counter/collect?id=27160&amp;r=https%3A//alskom.uz/ru/&amp;pg=https%3A//alskom.uz/ru/contacts/&amp;c=Y&amp;j=N&amp;wh=1536x864&amp;px=24&amp;js=1.3&amp;col=F7AE00&amp;t=ffffff&amp;p=0E418F"
+                     width="88" height="31" border="0" alt="Топ рейтинг www.uz">
+            </a>
         </div>
     </div>
 </footer>
