--- a/site/src/app/layout/header/header.component.css
+++ b/site/src/app/layout/header/header.component.css
@@ -20,3 +20,12 @@
 .heading-button-right {
     margin-left: 10px;
 }
+
+#owl-demo .item{
+    margin: 3px;
+}
+#owl-demo .item img{
+    display: block;
+    width: 100%;
+    height: auto;
+}
