--- a/site/src/app/contact/contact.component.html
+++ b/site/src/app/contact/contact.component.html
@@ -1,57 +1,58 @@
-<section id="contact" [ngStyle.lt-md]="{'margin-top': '50px', 'margin-bottom': '50px'}">
-    <div class="container">
-		      <div class="contact-section contact-heading mat-typography" fxLayout="column" fxLayoutAlign="center center">
-		            <div>
-		            <h2 [ngStyle.lt-md]="{'margin-bottom': '15px'}">Contact Us</h2>
-		            </div>
-		            <div>
-			        <h3 [ngStyle.xs]="{'font-size': '18px'}" [ngStyle.sm]="{'font-size': '22px'}">Lorem ipsum dolor sit amet conse ctetur adipi sicing elit. Doloribus numquam quis.</h3>
-			        </div>
-		        </div>
+<mat-grid-list cols="2" rowHeight="1:1">
+    <mat-grid-tile>
+        <section id="contact" [ngStyle.lt-md]="{'margin-top': '30px', 'margin-bottom': '30px'}">
+            <div class="container">
+                <div class="contact-section contact-heading mat-typography" fxLayout="column"
+                     fxLayoutAlign="center center">
+                    <div>
+                        <h2 [ngStyle.lt-md]="{'margin-bottom': '15px'}">Обратная связь</h2>
+                    </div>
+                </div>
 
+                <form class="formwidth" (ngSubmit)="onSubmit()">
+                    <div class="contact-form">
 
+                        <mat-form-field appearance="outline" color="accent">
+                            <mat-label>
+                                Ваше имя <strong style="color: red">*</strong>
+                            </mat-label>
+                            <input matInput [formControl]="nameFormControl"
+                                   [errorStateMatcher]="matcher">
+                        </mat-form-field>
 
-				<form class="formwidth" (ngSubmit)="onSubmit()">
-				  <div class="contact-form" [ngStyle.xs]="{'padding-left': '50px', 'padding-right': '50px'}" [ngStyle.sm]="{'padding-left': '100px', 'padding-right': '100px'}" [ngStyle.md]="{'padding-left': '150px', 'padding-right': '150px'}" [ngStyle.lg]="{'padding-left': '200px', 'padding-right': '200px'}">
-					  
-				  	  <mat-form-field appearance="outline" color="accent">
-					  	<mat-label>Please enter your name </mat-label>
-					    <input matInput placeholder="Name" [formControl]="nameFormControl"
-					           [errorStateMatcher]="matcher">
-					    <mat-error *ngIf="nameFormControl.hasError('required')">
-					      Name is <strong>required</strong>
-					    </mat-error>
-					  </mat-form-field>
+                        <mat-form-field appearance="outline" color="accent">
+                            <mat-label>Ваш E-mail
+                                <strong style="color: red">*</strong>
+                            </mat-label>
+                            <input matInput [formControl]="emailFormControl"
+                                   [errorStateMatcher]="matcher">
+                        </mat-form-field>
 
-					  <mat-form-field appearance="outline" color="accent">
-					  	<mat-label>Please enter your phone </mat-label>
-					    <input matInput placeholder="Phone" [formControl]="phoneFormControl"
-					           [errorStateMatcher]="matcher">
-					    <mat-error *ngIf="phoneFormControl.hasError('required')">
-					      Phone is <strong>required</strong>
-					    </mat-error>
-					  </mat-form-field>
+                        <mat-form-field appearance="outline" color="accent">
+                            <mat-label>Сообщение <strong style="color: red">*</strong></mat-label>
+                            <textarea matInput
+                                      cdkTextareaAutosize
+                                      [formControl]="commentFormControl"
+                                      [errorStateMatcher]="matcher"
+                                      cdkAutosizeMinRows="10"
+                                      cdkAutosizeMaxRows="15"></textarea>
+                        </mat-form-field>
 
-					  <mat-form-field appearance="outline" color="accent">
-					  	<mat-label>Please enter your email </mat-label>
-					    <input matInput placeholder="Email" [formControl]="emailFormControl"
-					           [errorStateMatcher]="matcher">
-					    <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-					      Please enter a valid email address
-					    </mat-error>
-					    <mat-error *ngIf="emailFormControl.hasError('required')">
-					      Email is <strong>required</strong>
-					    </mat-error>
-					  </mat-form-field>
+                        <br>
 
-					  <br>
+                        <div fxLayout="row" fxLayoutAlign="center center">
+                            <button mat-raised-button color="accent" type="submit">Отправить</button>
+                        </div>
 
-					  <div fxLayout="row" fxLayoutAlign="center center">
-					    <button mat-raised-button color="accent" type="submit">Contact Us</button>
-					   </div>
+                    </div>
 
-				  </div>
-  					
-				</form>
-	</div>
-</section>
+                </form>
+
+            </div>
+        </section>
+    </mat-grid-tile>
+    <mat-grid-tile>
+        <iframe src="https://yandex.com/map-widget/v1/-/CGG6ETiA" width="600" height="400" frameborder="0"
+                allowfullscreen="true"></iframe>
+    </mat-grid-tile>
+</mat-grid-list>
