--- a/site/src/app/contact/contact.component.scss
+++ b/site/src/app/contact/contact.component.scss
@@ -1,24 +1,24 @@
-.contact-section{
+.contact-section {
   text-align: center;
 }
 
-.contact-heading{
+.contact-heading {
   padding-bottom: 30px;
 }
 
-.contact-heading h2{
+.contact-heading h2 {
   font-size: 32px;
 }
 
-.contact-heading h3{
+.contact-heading h3 {
   font-size: 22px;
 }
 
 .contact-form {
-  display: flex;
+  //display: flex;
   flex-direction: column;
-  padding-left: 300px;
-  padding-right: 300px;
+  //padding-left: 300px;
+  //padding-right: 300px;
 }
 
 .contact-form > * {
