--- a/site/src/app/layout/footer/footer.component.scss
+++ b/site/src/app/layout/footer/footer.component.scss
@@ -1,61 +1,66 @@
 .docs-footer {
-    padding: 12px;
-    font-size: 12px;
-    margin-top: 40px;
+  padding: 12px;
+  font-size: 12px;
+  margin-top: 40px;
 }
 
 .docs-footer-list {
-    align-items: center;
-    display: flex;
-    flex-flow: row wrap;
-    padding: 8px;
+  align-items: center;
+  display: flex;
+  flex-flow: row wrap;
+  padding: 8px;
 }
 
 .docs-footer-logo {
-    flex: 1;
+  flex: 1;
 }
 
 .docs-footer-angular-logo {
-    height: 50px;
+  height: 50px;
 }
 
 .docs-footer-version {
-    flex: 1;
-    text-align: center;
+  flex: 1;
+  text-align: center;
+  font-size: 12px;
 }
 
 .docs-footer-copyright {
-    display: flex;
-    flex: 1;
-    justify-content: flex-end;
-    flex-direction: column;
-    min-width: 225px;
-    text-align: center;
+  display: flex;
+  flex: 1;
+  justify-content: flex-end;
+  flex-direction: column;
+  min-width: 225px;
+  text-align: center;
 }
 
 .docs-footer-logo span {
-    display: inline-block;
-    line-height: 50px;
-    margin: 0 40px;
-    vertical-align: bottom;
+  display: inline-block;
+  line-height: 50px;
+  margin: 0 40px;
+  vertical-align: bottom;
 
-a {
+  a {
     font-size: 16px;
     padding: 0;
-}
+  }
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 
-&:hover {
-     text-decoration: underline;
- }
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
-@media screen and (max-width: 884px){
-    .docs-footer-list {
-        flex-direction: column;
-    }
+@media screen and (max-width: 884px) {
+  .docs-footer-list {
+    flex-direction: column;
+  }
+}
+
+mat-list-item {
+  height: 30px !important;
 }
